add xml generation to publisher