@@ -10,6 +10,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import org.apache.commons.lang3.StringUtils;
+
 import java.nio.charset.StandardCharsets;
 
 @Service
@@ -30,18 +32,18 @@ public class XmlRegenerationService {
         String taxNumber = invoice.getUser().getTaxpayer().getTaxNumber();
         String invoiceNumber = invoice.getInvoiceNumber();
 
-        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getId(),
-                "Regenerating XML for invoiceId={}", invoice.getId());
+        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                "Regenerating XML for invoiceId={}", invoice.getInvoiceId());
 
         // ── 2. Convert Invoice entity → InvoiceDTO ─────────────────────────
         InvoiceDTO invoiceDTO;
         try {
             invoiceDTO = invoiceReverseConverter.entityToDto(invoice);
         } catch (Exception e) {
-            CustomLogging.logError("CONVERT_FAILED", invoice.getId(),
-                    "Failed to convert invoiceId={}: {}", invoice.getId(), e.getMessage());
+            CustomLogging.logError("CONVERT_FAILED", invoice.getInvoiceId(),
+                    "Failed to convert invoiceId={}: {}", invoice.getInvoiceId(), e.getMessage());
             throw new RuntimeException(
-                    "Failed to convert invoice id=" + invoice.getId() + ": " + e.getMessage(), e);
+                    "Failed to convert invoice id=" + invoice.getInvoiceId() + ": " + e.getMessage(), e);
         }
 
         // ── 3. Determine requestFrom ───────────────────────────────────────
@@ -54,35 +56,35 @@ public class XmlRegenerationService {
 
         );
 
-        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getId(),
-                "Base XML generated for invoiceId={}", invoice.getId());
+        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                "Base XML generated for invoiceId={}", invoice.getInvoiceId());
 
         // ── 5. Minify + Canonicalize  (SME: MinifyAndCanonicalizeXml step) ─
         String canonicalXml;
         try {
             canonicalXml = xmlCanonicalizer.minifyAndCanonicalize(rawXml)
                     .replaceAll("<\\?xml(.+?)\\?>", "");
-            CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getId(),
-                    "XML canonicalized for invoiceId={}", invoice.getId());
+            CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                    "XML canonicalized for invoiceId={}", invoice.getInvoiceId());
         } catch (Exception e) {
-            CustomLogging.logError("CANONICALIZE_FAILED", invoice.getId(),
-                    "Canonicalization failed for invoiceId={}: {}", invoice.getId(), e.getMessage());
+            CustomLogging.logError("CANONICALIZE_FAILED", invoice.getInvoiceId(),
+                    "Canonicalization failed for invoiceId={}: {}", invoice.getInvoiceId(), e.getMessage());
             throw new RuntimeException(
-                    "Canonicalization failed for invoiceId=" + invoice.getId() + ": " + e.getMessage(), e);
+                    "Canonicalization failed for invoiceId=" + invoice.getInvoiceId() + ": " + e.getMessage(), e);
         }
 
         // ── 6. Generate QR code  (SME: InvoiceQRGenerator step) ───────────
         String qrCode;
-        if (invoice.getQrCode().isBlank()) {
+        if (StringUtils.isBlank(invoice.getQrCode())) {
             try {
                 qrCode = qrGeneratorService.generateQRstatically(canonicalXml);
-                CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getId(),
-                        "QR generated for invoiceId={}", invoice.getId());
+                CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                        "QR generated for invoiceId={}", invoice.getInvoiceId());
             } catch (Exception e) {
-                CustomLogging.logError("QR_FAILED", invoice.getId(),
-                        "QR generation failed for invoiceId={}: {}", invoice.getId(), e.getMessage());
+                CustomLogging.logError("QR_FAILED", invoice.getInvoiceId(),
+                        "QR generation failed for invoiceId={}: {}", invoice.getInvoiceId(), e.getMessage());
                 throw new RuntimeException(
-                        "QR generation failed for invoiceId=" + invoice.getId() + ": " + e.getMessage(), e);
+                        "QR generation failed for invoiceId=" + invoice.getInvoiceId() + ": " + e.getMessage(), e);
             }
 
         } else {
@@ -92,8 +94,8 @@ public class XmlRegenerationService {
         // ── 7. Call signing service  (SME: invoiceSigningForSme step) ──────
         //    POST { invoice: canonicalXml, qrCode } → signed XML
         if (!signingEnabled) {
-            CustomLogging.logWarn("SIGNING_SKIPPED", taxNumber, invoiceNumber, invoice.getId(),
-                    "Signing skipped (signing.enabled=false) for invoiceId={}", invoice.getId());
+            CustomLogging.logWarn("SIGNING_SKIPPED", taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                    "Signing skipped (signing.enabled=false) for invoiceId={}", invoice.getInvoiceId());
             return canonicalXml.getBytes(StandardCharsets.UTF_8);
         }
 
@@ -101,13 +103,13 @@ public class XmlRegenerationService {
         try {
             signedXml = signingCallerService.sign(canonicalXml, qrCode, invoice);
         } catch (Exception e) {
-            CustomLogging.logError("SIGNING_FAILED", invoice.getId(),
-                    "Signing failed for invoiceId={}: {}", invoice.getId(), e.getMessage());
-            throw new RuntimeException("Signing failed for invoiceId=" + invoice.getId() + ": " + e.getMessage(), e);
+            CustomLogging.logError("SIGNING_FAILED", invoice.getInvoiceId(),
+                    "Signing failed for invoiceId={}: {}", invoice.getInvoiceId(), e.getMessage());
+            throw new RuntimeException("Signing failed for invoiceId=" + invoice.getInvoiceId() + ": " + e.getMessage(), e);
         }
 
-        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getId(),
-                "Signing complete for invoiceId={}", invoice.getId());
+        CustomLogging.logInfo(taxNumber, invoiceNumber, invoice.getInvoiceId(),
+                "Signing complete for invoiceId={}", invoice.getInvoiceId());
 
         return signedXml.getBytes(StandardCharsets.UTF_8);
     }
